removed unecessary features.

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Fuse Angular - Angular Template and Starter Kit</title>
+        <title>Techcora Angular - Angular Template and Starter Kit</title>
         <meta charset="utf-8">
         <meta
             name="description"
             content="Admin Template and Starter Kit with Angular, Angular Material Components and TailwindCSS">
         <meta
             name="keywords"
-            content="Fuse,HTML,CSS,Angular,Angular 13,Angular 14,Angular 15,Material,Angular Components,Tailwind,Tailwind CSS,TailwindCSS,Admin Template,Admin Starter Kit">
+            content="Techcora,HTML,CSS,Angular,Angular 13,Angular 14,Angular 15,Material,Angular Components,Tailwind,Tailwind CSS,TailwindCSS,Admin Template,Admin Starter Kit">
         <meta
             name="viewport"
             content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
@@ -55,7 +55,7 @@
         <fuse-splash-screen>
             <img
                 src="assets/images/logo/logo.svg"
-                alt="Fuse logo">
+                alt="Techcora logo">
             <div class="spinner">
                 <div class="bounce1"></div>
                 <div class="bounce2"></div>
